# Secure-Data-Transfer

./: .gitignore  .pylintrc  README.md  db.py  pyproject.toml  repo.py  requirements.txt  setup.py  start.sh
assets/keys/public/: key01.pem  key02.pem  key03.pem
gui/: encryption_gui.py  main.py
scripts/: asymmetricRSAEncrypt.py  decrypt.py  mainGUI.py  symmetricEncryptAES.py
secureDataTransfer/: mainGUI.py  secure_data_transfer.py  symmetricEncryptAES.py
src/secure-data-transfer/decryption/: asymmetric.py  symmetric.py
src/secure-data-transfer/encryption/: asymmetric.py  symmetric.py
src/secure-data-transfer/gui/: decryption_gui.py  main.py
src/secure-data-transfer/utils/: file_operations.py  keyPairGenerator.py
src/securedatatransfer/: main.py
src/securedatatransfer/decryption/: asymmetric.py  symmetric.py
src/securedatatransfer/encryption/: asymmetric.py  symmetric.py
src/securedatatransfer/gui/: decrypt_key.py  decryption_gui.py  encryption_gui.py
src/securedatatransfer/utils/: file_operations.py  keyPairGenerator.py
tests/: dbtest.py
tests/integration/securedatatransfer/gui/: decryprion_gui_test.py  encryption_gui_test.py
tests/performance/: asymmetric_test.py  symmetric_test.py
tests/reliability/: asymmetric_test.py  reliability_test.py
tests/securedatatransfer/decryption/: symmetric_test.py
tests/securedatatransfer/encryption/: asymmetric_test.py  symmetric_test.py
tests/securedatatransfer/utils/: file_operations_test.py
tests/unit/: repo_test.py
utils/: keyPairGenerator.py
(+4 files in other folders)
